# ClaudeMon32

./: .gitignore  .mcp.json  AGENTS.md  README.md  TASKS.md
.codex/: config.toml
.gemini/: settings.json
.memory/architecture/: architecture-decision.md  cockpit-firmware-rendering.md  cockpit-web-admin.md  hardware-targets.md  (+4 more)
design/: ClaudeMon Display â€” Design Spec.html
docs/: architecture.md  hardware.md  licenses.md  protocol.md  troubleshooting.md
host/: README.md  pyproject.toml
host/src/claudemon/: __init__.py  admin.html  admin.py  cli.py  cloudflare.py  collect.py  config.py  daemon.py  github.py  http.py  keychain.py  launchd.py  models.py  net_link.py  oauth.py  paddle.py  render.py  serial_link.py  sources.py  usage.py
host/tests/: conftest.py  test_admin.py  test_alerts.py  test_cockpit_payload.py  test_collect.py  test_config.py  test_daemon.py  test_discovery.py  test_formatters.py  test_net_link.py  test_paddle.py  test_usage.py
tasks/: t-0e9adea6.md  t-11e53daa.md  t-1315af5a.md  t-286cbe0b.md  t-3e436953.md  t-3ece4121.md  t-44834934.md  t-52b8a3a4.md  t-53cec871.md  t-5e8c70ae.md  t-72793ade.md  t-77c118a0.md  t-9b2f23bb.md  t-cfe46b0e.md  t-d580cf64.md  t-da02e6ba.md  t-ddd03e87.md  t-e293f383.md  t-f8a407ed.md
vendors/: cloudflare-access-token.md  github-access-token.md  paddle-api-token.md
wiki/: Architecture-Overview.md  FAQ.md  Getting-Started.md  Hardware-&-Flashing.md  Home.md  Host-Agent-&-Credentials.md  Serial-Protocol-&-Device-Commands.md  Troubleshooting.md  Using-ClaudeMon.md  Wiki-Maintenance.md  _Footer.md  _Sidebar.md
(+80 files in other folders)
