[project]
name = "claudemon"
version = "0.1.0"
description = "Multi-account Claude subscription usage monitor for the ClaudeMon32 ESP32 e-paper device"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyserial>=3.5",
]

[project.scripts]
claudemon = "claudemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudemon"]
