[project]
name = "claudemon"
version = "0.3.0"
description = "Multi-account Claude subscription usage monitor for the ClaudeMon32 ESP32 e-paper device"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/awizemann/ClaudeMon32"
Documentation = "https://github.com/awizemann/ClaudeMon32/tree/main/docs"
Issues = "https://github.com/awizemann/ClaudeMon32/issues"

[project.scripts]
claudemon = "claudemon.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudemon"]
